test: testing package criteria, creating all test